2013-05-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/options.cpp:
	* src/model/options.h:
	* src/qt4/draw_config.cpp:
	* src/qt4/draw_config.h:
	* src/qt4/score_board_painter.cpp:
	- スコアボードの高さをフォントの大きさに応じて自動調整するように変更

	* src/qt4/action_sequence_selector.cpp:
	- ダイアログのコンストラクタ内でウィジェットとレイアウトの生成処理を行うように整理

	* src/model/action_sequence_log_parser.cpp:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- ActionSequenceSelector上でダブルクリックした行動列に対して，
	FieldEvaluatorの詳細ログを別ダイアログで表示する機能を追加

2013-05-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	- 表示データ更新時に評価値のカラム幅を内容に合わせて変更するようにした

	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	- 行動列の長さでフィルタする機能を追加

	* src/model/debug_log_data.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/debug_message_window.cpp:
	- rcsc::Logger::PLANを末尾へ移動
	- 行動列の探索結果はPLANで記録されているものとして扱うように変更

2013-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- 文字列によるフィルタ機能を追加．文字列はスペース区切りでAND検索

	* src/qt4/debug_message_window.cpp:
	- 起動時に自動的に右サイドの1番が選択されてしまうバグを修正

	* src/model/action_sequence_description.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	- ActionSequenceSelectorにプレイヤの背番号表示機能を追加
	- ActionSequenceSelectorのフィルタ実行後にマッチした数を表示できるように改良
	- DebugMessageWindowのタブ選択でフィールド上のプレイヤも選択されるように変更

	* src/qt4/action_sequence_selector.cpp:
	- スペース区切りで複数のIDを指定できるように機能追加

	* src/qt4/color_setting_dialog.cpp:
	* src/qt4/debug_log_painter.cpp:
	* src/qt4/draw_config.cpp:
	* src/qt4/draw_config.h:
	- 行動列の描画でパス行動の色を単独で設定できるように変更

	* src/qt4/debug_log_painter.cpp:
	- 行動列描画時に評価値の描画も追加

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	- 行動のIDでフィルタする機能を追加

	* src/qt4/color_setting_dialog.cpp:
	* src/qt4/debug_log_painter.cpp: